components/app-configs/n8n/base/n8n-runners.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-runners
spec:
  replicas: 1
  selector:
    matchLabels:
      deploy: n8n-runners
  template:
    metadata:
      labels:
        deploy: n8n-runners
    spec:
      containers:
      - name: n8n-runners
        image: docker.io/n8nio/runners:1.111.0
        volumeMounts:
        - name: empty
          mountPath: /home/user
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5680
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5680
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: empty
        emptyDir: {}
      # - name: n8n-runners
      #   persistentVolumeClaim:
      #     claimName: n8n-runners
