components/app-configs/n8n/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
  - name: api
    port: 5678
    targetPort: 5678
  sessionAffinity: None
  type: ClusterIP
