components/app-configs/n8n/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: n8n
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: 5678
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: n8n
    weight: 100
  wildcardPolicy: None
